objects/ProgramRequirement__c.object
<CustomObject>
    <description>May 2013 Release. Requirements associated to the Partner Programs.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if the Program requirement is active or not</description>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Applicableto__c</fullName>
        <formula>TEXT(RequirementCatalog__r.Applicableto__c)</formula>
        <label>Applicable to</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <formula>TEXT( RequirementCatalog__r.Category__c )</formula>
        <label>Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Certification</label>
        <referenceTo>CertificationCatalog__c</referenceTo>
        <relationshipLabel>Program Requirements</relationshipLabel>
        <relationshipName>ProgramRequirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <formula>RequirementCatalog__r.Description__c</formula>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExpirationPeriodMonth__c</fullName>
        <formula>CASE(VALUE(TEXT(RequirementCatalog__r.ExpirationPeriodMonths__c)), -1, &apos;Do not expire&apos;,TEXT(RequirementCatalog__r.ExpirationPeriodMonths__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expiration Period (Months)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExpirationPeriodMonths__c</fullName>
        <formula>CASE(VALUE(TEXT(RequirementCatalog__r.ExpirationPeriodMonths__c)), -1, &apos;Do not expire&apos;,TEXT(RequirementCatalog__r.ExpirationPeriodMonths__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expiration Period (Months)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPRM_MissionChallenge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mission Challenge</label>
        <referenceTo>FieloCH__MissionChallenge__c</referenceTo>
        <relationshipLabel>Program Requirements</relationshipLabel>
        <relationshipName>Program_Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GlobalProgramRequirement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Global Program Requirement</label>
        <referenceTo>ProgramRequirement__c</referenceTo>
        <relationshipLabel>Global Program Requirements</relationshipLabel>
        <relationshipName>ProgramRequirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mandatory__c</fullName>
        <formula>IF(RequirementCatalog__r.Mandatory__c,&apos;Yes&apos;,&apos;No&apos;)</formula>
        <label>Mandatory?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manual__c</fullName>
        <formula>TEXT( RequirementCatalog__r.Manual__c )</formula>
        <label>Manual?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NoofAccContCertifiedSpecialized__c</fullName>
        <label>No. of Contacts Certified</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PartnerProgram__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Parent Partner Program</description>
        <label>Partner Program</label>
        <lookupFilter>
            <active>false</active>
            <booleanFilter>1 OR ( NOT (2 AND 3))</booleanFilter>
            <filterItems>
                <field>PartnerProgram__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Global Program</value>
            </filterItems>
            <filterItems>
                <field>$Source.Id</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>PartnerProgram__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Country Partner Program</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>PartnerProgram__c</referenceTo>
        <relationshipLabel>Program Requirements</relationshipLabel>
        <relationshipName>ProgramRequirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProgramLevel__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Program Level to which the Requirement is associated with</description>
        <label>Program Level</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ProgramLevel__c.PartnerProgram__c</field>
                <operation>equals</operation>
                <valueField>$Source.PartnerProgram__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ProgramLevel__c</referenceTo>
        <relationshipLabel>Program Requirements</relationshipLabel>
        <relationshipName>ProgramRequirements</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProgramType__c</fullName>
        <description>Describes the type of program.</description>
        <formula>PartnerProgram__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequirementCatalog__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Related Requirement Catalog</description>
        <label>Requirement Catalog</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>RequirementCatalog__c.Retired__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>RequirementCatalog__c</referenceTo>
        <relationshipLabel>Program Requirements</relationshipLabel>
        <relationshipName>Program_Requirements</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SEID__c</fullName>
        <description>OCT 13 PRM: SE Catalog ID of the requirement</description>
        <formula>RequirementCatalog__r.SEID__c</formula>
        <label>SE ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TECH_FieloMission__c</fullName>
        <formula>RequirementCatalog__r.FieloPRM_Mission__c</formula>
        <label>TECH_FieloMission</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TECH_InactiveGlobalRequirement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TECH_InactiveGlobalRequirement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TECH_ProgramAdminEmail__c</fullName>
        <label>TECH_ProgramAdminEmail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>TECH_ProgramApproverEmail__c</fullName>
        <label>TECH_ProgramApproverEmail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>TECH_ProgramOwnerEmail__c</fullName>
        <label>TECH_ProgramOwnerEmail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Target_Guidelines__c</fullName>
        <formula>RequirementCatalog__r.TargetGuidelines__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Guidelines</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <label>Target</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Program Requirement</label>
    <nameField>
        <displayFormat>PR-{0000000}</displayFormat>
        <label>Program Requirement ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Requirements</pluralLabel>
    <recordTypes>
        <fullName>ActivityRequirement</fullName>
        <active>true</active>
        <description>Requirements tied to Activity Requirements</description>
        <label>Activity Requirement</label>
    </recordTypes>
    <recordTypes>
        <fullName>CertificationRequirement</fullName>
        <active>true</active>
        <description>Requirements tied to Certification Requirements</description>
        <label>Certification Requirement</label>
    </recordTypes>
    <recordTypes>
        <fullName>TargetRequirement</fullName>
        <active>true</active>
        <description>Requirements tied to Target Requirements</description>
        <label>Target Requirement</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>PRR_VR_MAY13PRM01_CheckGlobalReqStatus</fullName>
        <active>true</active>
        <description>Please activate the Parent Level and then try again</description>
        <errorConditionFormula>AND($User.BypassVR__c=False,(IF( 
AND(
 GlobalProgramRequirement__c  != null ,
 GlobalProgramRequirement__r.Active__c = false,
 ISCHANGED(Active__c) ,
 Active__c = true),true,false)))</errorConditionFormula>
        <errorMessage>Please activate the Parent Requirement at Global Level and then try again</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PRR_VR_MAY13PRM02_CheckUserAccess</fullName>
        <active>true</active>
        <description>To check that only Program Owners can create/edit global program requirements</description>
        <errorConditionFormula>AND($User.BypassVR__c=False,(IF(
AND(
(
NOT
(OR( 
$User.ProgramOwner__c,
$User.ProgramAdministrator__c 
))),
 PartnerProgram__r.RecordType.Id =  $Label.CLMAY13PRM15),
true,
false)))</errorConditionFormula>
        <errorMessage>Only Program Owners/Program Administrators  can create/edit global program requirement.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PRR_VR_MAY13PRM03_CheckMandatoryReq</fullName>
        <active>true</active>
        <description>For PRM May 13 Release
To restrict users to update the Req to inactive when the Req is Manadatory</description>
        <errorConditionFormula>AND($User.BypassVR__c=False,(IF( AND(
Mandatory__c =&apos;Yes&apos;,
Active__c = false,NOT(ISNEW()) ,
OR(
PartnerProgram__r.RecordType.Id = $Label.CLMAY13PRM05,PartnerProgram__r.RecordType.Id = $Label.CLJUN13PRM09),
NOT(OR( $User.ProgramAdministrator__c , $User.ProgramOwner__c ))
),true,false)))</errorConditionFormula>
        <errorMessage>Mandatory Requirement cannot be inactive. Please update the requirement to active</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PRR_VR_MAY13PRM03_CheckUserAccess</fullName>
        <active>true</active>
        <description>Requirement can be activated only if the parent level is active.</description>
        <errorConditionFormula>AND($User.BypassVR__c=False,(IF(
AND(
 ProgramLevel__c  != null ,
NOT( ISPICKVAL(  ProgramLevel__r.LevelStatus__c  , &apos;Active&apos;) ),
 Active__c =true),true,false)))</errorConditionFormula>
        <errorMessage>Please activate the related Program Level and then try again</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PRR_VR_MAY13PRM04_CantChangeLevelPrgReq</fullName>
        <active>true</active>
        <description>For PRM May 13 Release
Program Level,Partner PRogram and Requirement Catalog cannot be updated</description>
        <errorConditionFormula>AND($User.BypassVR__c=False,(IF(
OR(
 ISCHANGED( ProgramLevel__c ) ,
 ISCHANGED(  RequirementCatalog__c  ) 

),
true,false
)))</errorConditionFormula>
        <errorMessage>Program Level or Requirement Catalog cannot be updated</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PRR_VR_MAY13PRM05_SameRecordType</fullName>
        <active>true</active>
        <errorConditionFormula>NOT($User.BypassVR__c )  &amp;&amp;
(
(  RecordTypeId == &apos;012K00000008kTb&apos;  &amp;&amp;   RequirementCatalog__r.RecordTypeId &lt;&gt; &apos;012K00000008kTg&apos;)  ||
(  RecordTypeId == &apos;012K00000008kTc&apos;  &amp;&amp;  RequirementCatalog__r.RecordTypeId&lt;&gt; &apos;012K00000008kTh&apos;)  ||
(  RecordTypeId == &apos;012K00000008kTd&apos;  &amp;&amp;  RequirementCatalog__r.RecordTypeId&lt;&gt; &apos;012K00000008kTi&apos;)   
)</errorConditionFormula>
        <errorDisplayField>RequirementCatalog__c</errorDisplayField>
        <errorMessage>Please select  Requirement of same type</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PRR_VR_OCT14PRM01_CheckGlobalProgramOwnr</fullName>
        <active>true</active>
        <description>To check whether the user is global program owner.</description>
        <errorConditionFormula>AND($User.BypassVR__c=False,(IF( 
AND( 
( 
NOT 
(OR( 
$User.ProgramAdministrator__c , 
$User.ProgramApprover__c , 
AND($User.ProgramOwner__c, 
$User.Id = PartnerProgram__r.OwnerId) 
))), 
PartnerProgram__r.RecordTypeId = $Label.CLMAY13PRM15), 
true, 
false)))</errorConditionFormula>
        <errorMessage>Only Global Program owners can create/edit global program Requirements.</errorMessage>
    </validationRules>
</CustomObject>